--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--Content-->
 <!----------->
 <div>
-    <h1>Do things</h1>
+    <h1>VATLAYER</h1>
     <!--input field-->
     <input type="text" id="input" />
       <!--button-->
